*SVN*

* Hash#symbolize_keys skips keys that can't be symbolized.  #10500 [Brad Greenlee]

* Ruby 1.9 compatibility.  #1689, #10466, #10468, #10554 [Cheah Chu Yeow, Pratik Naik, Jeremy Kemper, Dirkjan Bussink]

* TimeZone#to_s uses UTC rather than GMT.  #1689 [Cheah Chu Yeow]

* Refactor of Hash#symbolize_keys! to use Hash#replace.  Closes #10420 [ReinH]

* Fix HashWithIndifferentAccess#to_options! so it doesn't clear the options hash.  Closes #10419 [ReinH]


*2.0.1* (December 7th, 2007)

* Added Array#from and Array#to that behaves just from String#from and String#to [DHH]

* Fix that empty collections should be treated as empty arrays regardless of whitespace for Hash#from_xml #10255 [adamj]

* Time#time_with_datetime_fallback, Time#to_datetime, Date#to_datetime and String#to_datetime honor Ruby's default calendar reform setting. #10201 [Geoff Buesing]

* Change Time and DateTime #end_of_month to return last second of month instead of beginning of last day of month. Closes #10200 [Geoff Buesing]

* Speedup String#blank?  [Jeremy Kemper, Koz]

* Add documentation for Hash#diff. Closes #9306 [Tarmo Tänav]

* Add new superclass_delegating_accessors.  Similar to class inheritable attributes but with subtly different semantics. [Koz, Tarmo Tänav]

* Change JSON to encode %w(< > &) as 4 digit hex codes to be in compliance with the JSON spec.  Closes #9975 [Josh Peek, Cheah Chu Yeow, Tim Pope]

* Fix JSON encoding/decoding bugs dealing with /'s.  Closes #9990 [Rick, theamazingrando]

* Introduce a base class for all test cases used by rails applications. ActiveSupport::TestCase [Koz]

  The intention is to use this to reduce the amount of monkeypatching / overriding that 
  is done to test/unit's classes.

* Document Enumerable and Hash #to_json.  #9970 [Cheah Chu Yeow]

* Hash#to_xml handles symbol values.  #9954 [Assaf]

* Hash#symbolize_keys behaves well with integer keys.  #9890 [PotatoSalad]

* Multibyte: String#slice supports regexp argument.  #9646 [yob]
